# configurable-light-sensor

./: README.md
flask_server/: main.py
flask_server/templates/: index.html
picoproject/: CMakeLists.txt  picoproject.c
